Fix spacing issues in the header.

--- a/assets/layout/base.css
+++ b/assets/layout/base.css
@@ -69,7 +69,7 @@ ul.links ul {
   height: var(--nz-s-head-height);
   border-bottom: 1px solid var(--nz-c-divider);
   background-color: var(--nz-c-head-bg);
-  padding: 0 12px 0 24px;
+  padding: 0 12px;
   box-sizing: border-box;
   z-index: 40;
 }
